<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:text="@string/name"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_border_gray"
            android:hint="@string/enter_here"
            android:paddingHorizontal="@dimen/size_16"
            android:paddingVertical="@dimen/size_16"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:text="Email"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_border_gray"
            android:hint="@string/enter_here"
            android:paddingHorizontal="@dimen/size_16"
            android:paddingVertical="@dimen/size_16"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:text="@string/phone_number"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_border_gray"
            android:hint="@string/enter_here"
            android:paddingHorizontal="@dimen/size_16"
            android:paddingVertical="@dimen/size_16"
            android:textSize="@dimen/text_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:text="@string/password"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_border_gray"
            android:hint="@string/enter_here"
            android:paddingHorizontal="@dimen/size_16"
            android:paddingVertical="@dimen/size_16"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:background="@drawable/background_green_24"
            android:padding="@dimen/size_8"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />
            <TextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:text="@string/login_now"
                android:textAlignment="center"
                android:id="@+id/tvLogin"
                android:textColor="@color/green"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>