<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="@dimen/size_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_14"
            android:hint="@string/enter_here"
            android:paddingVertical="@dimen/size_16"
            android:paddingHorizontal="@dimen/size_16"
            android:background="@drawable/background_white_border_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:layout_marginTop="@dimen/size_8"
            android:textColor="@color/green"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_14"
            android:hint="@string/enter_here"
            android:paddingVertical="@dimen/size_16"
            android:paddingHorizontal="@dimen/size_16"
            android:background="@drawable/background_white_border_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvLogin"
            android:background="@drawable/background_green_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_8"
            android:textAlignment="center"
            android:text="@string/login"
            android:layout_marginTop="@dimen/size_24"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/size_8"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>