<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvData"
        app:cardCornerRadius="@dimen/size_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        app:cardElevation="@dimen/size_16"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:padding="@dimen/size_16"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_150"
                android:src="@color/green" />
            <TextView
                android:id="@+id/tvName"
                android:text="Testing"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:textSize="@dimen/text_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvEmail"
                android:text="testing@gmail.com"
                android:textSize="@dimen/text_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLanguage"
        app:cardCornerRadius="@dimen/size_16"
        android:layout_margin="@dimen/size_16"
        app:cardElevation="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@+id/cvData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="@dimen/size_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivLanguage"
                android:src="@drawable/baseline_language_24"
                android:layout_width="@dimen/size_28"
                android:layout_height="@dimen/size_28"
                app:tint="@color/green" />
            <ImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/ivNext"
                android:background="@drawable/background_gray_8"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:layout_width="@dimen/size_28"
                android:layout_height="@dimen/size_28"/>
            <TextView
                android:layout_marginStart="@dimen/text_16"
                android:textColor="@color/gray_600"
                android:textStyle="bold"
                android:textSize="@dimen/text_14"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivLanguage"
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvLang"
                android:textColor="@color/gray_400"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/size_8"
                android:textSize="@dimen/text_14"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ivNext"
                android:text="Language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotification"
        app:cardCornerRadius="@dimen/size_16"
        android:layout_margin="@dimen/size_16"
        app:cardElevation="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@+id/cvLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="@dimen/size_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivNotification"
                android:src="@drawable/baseline_notifications_none_24"
                android:layout_width="@dimen/size_28"
                android:layout_height="@dimen/size_28"
                app:tint="@color/green" />
            <ImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/ivNext2"
                android:background="@drawable/background_gray_8"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:layout_width="@dimen/size_28"
                android:layout_height="@dimen/size_28"/>
            <TextView
                android:layout_marginStart="@dimen/text_16"
                android:textColor="@color/gray_600"
                android:textStyle="bold"
                android:textSize="@dimen/text_14"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivNotification"
                android:text="@string/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNotification"
                android:textColor="@color/gray_400"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/size_8"
                android:textSize="@dimen/text_14"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ivNext2"
                android:text="On"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvLogOut"
        android:layout_marginHorizontal="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@+id/cvNotification"
        android:background="@drawable/background_green_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_12"
        android:textAlignment="center"
        android:text="@string/logout"
        android:layout_marginTop="@dimen/size_80"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>